test/Feature/Output/srem.c.tmp.klee-out/test000004.pc
array y[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Sle 0
                  N0:(ReadLSB w32 0 y)))
         (Slt 4294967294 N0)]
        false)
